25.02.2025-2 Finishing Mars or now, Loottable Script