@@ -8,7 +8,6 @@ import org.bukkit.generator.BlockPopulator;
 import org.bukkit.generator.ChunkGenerator;
 import org.bukkit.util.noise.SimplexOctaveGenerator;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -22,7 +21,7 @@ public class MoonGen extends ChunkGenerator {
     @Override
     public List<BlockPopulator> getDefaultPopulators(World world) {
 
-        return Arrays.asList(new MoonPop());
+        return List.of(new MoonPop());
 
     }
 
