@@ -1,15 +1,14 @@
 
 package dimensions.solar.venus;
 
-import libs.FastNoiseLite;
 import cel.space.celutis;
+import libs.FastNoiseLite;
 import org.bukkit.Material;
 import org.bukkit.World;
 import org.bukkit.generator.BlockPopulator;
 import org.bukkit.generator.ChunkGenerator;
 import org.bukkit.util.noise.SimplexOctaveGenerator;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -25,7 +24,7 @@ public class VenusGen extends ChunkGenerator {
     @Override
     public List<BlockPopulator> getDefaultPopulators(World world) {
 
-        return Arrays.asList(new VenusPop());
+        return List.of(new VenusPop());
 
     }
 
